= Release Notes
:drivers_repo: http://ocient-archive/ocientrepo/java/jdbc

All our jdbc drivers are located {drivers_repo}[here]. 
Below is the release notes for every driver version that has customer implication.

//tag::compact[]

== 2.47 (2021-12-16)

New Features::

 * Data extract tool released.

//tag::compact[]

== 2.46 (2021-12-8)

New Features::

 * Fix connection pooling handling with regards to setting schema incorrectly.

//tag::compact[]

== 2.45 (2021-12-2)

New Features::

 * Swallow runtime error as well when trying to set socket options.

//tag::compact[]

== 2.44 (2021-12-1)

New Features::

 * Wrap invalid socket options in try catch block and swallow exceptions. For compatability with Java versions that are older.

//tag::compact[]

== 2.43 (2021-11-22)

New Features::

 * Change driver to not rely on the pom/MANIFEST for the driver version. Move the version into JDBCDriver

//tag::compact[]

== 2.42 (2021-11-18)

New Features::

 * Changed connections to utilize keep alive probes in order to detect dead connections.

//tag::compact[]
== 2.41 (2021-11-07)

New Features::

 * Upgrade Jline version to 3.21

//tag::compact[]
== 2.40 (2021-11-03)

New Features::

 * Improve result set fetching performance

//tag::compact[]
== 2.39 (2021-10-29)

New Features::

 * Fix handling of expired token being used to start a session

//tag::compact[]
== 2.38 (2021-10-27)

New Features::

 * Updated auth related SQLState error codes
 * Fix handling of result set close during result set caching

//tag::compact[]
== 2.37 (2021-10-25)

New Features::

 * Force redirect support for testing purposes.
 * Removed duplicate code from CLI

//tag::compact[]
== 2.36 (2021-10-14)

New Features::

 * Implemented refresh sessions support.
 * Implement get server session ID.

== 2.35 (2021-10-11)

New Features::

 * ExecutePlan and ExecuteInlinePlan bugfixes

//tag::compact[]
== 2.34 (2021-9-9)

New Features::
