@@ -41,6 +41,7 @@ import java.util.Base64;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.StringTokenizer;
@@ -1794,19 +1795,6 @@ public class XGConnection implements Connection
 		throw new SQLFeatureNotSupportedException();
 	}
 
-	@Override
-	public boolean equals(final Object o)
-	{
-		if (!(o instanceof XGConnection))
-		{
-			return false;
-		}
-
-		final XGConnection other = (XGConnection) o;
-		return this == o || originalIp.equals(other.originalIp) && originalPort == other.originalPort && user.equals(other.user) && pwd.equals(other.pwd) && database.equals(other.database)
-			&& tls.equals(other.tls) && properties.equals(other.properties);
-	}
-
 	void fetchServerVersion() throws Exception
 	{
 		LOGGER.log(Level.INFO, "Attempting to fetch server version");
@@ -2196,23 +2184,44 @@ public class XGConnection implements Connection
 		return retval;
 	}
 
+	/**
+	 * Equals and hashcode should almost always be autogenerated. Only roll your own if
+	 * 1. have a legitimate reason to do so (very rare)
+	 * 2. know what you're doing
+	 * 3. write unit tests for  object equality
+	 */
+
+	@Override
+	public boolean equals(Object o) {
+		if (o == this)
+			return true;
+		if (!(o instanceof XGConnection)) {
+			return false;
+		}
+		XGConnection xGConnection = (XGConnection) o;
+		return Objects.equals(originalIp, xGConnection.originalIp) && 
+							originalPort == xGConnection.originalPort && 
+							Objects.equals(user, xGConnection.user) && 
+							Objects.equals(database, xGConnection.database) && 
+							networkTimeout == xGConnection.networkTimeout && 
+							Objects.equals(tls, xGConnection.tls) && Objects.equals(pwd, xGConnection.pwd) && 
+							Objects.equals(properties, xGConnection.properties) && Objects.equals(setSchema, xGConnection.setSchema) && 
+							setPso == xGConnection.setPso && Objects.equals(maxRows, xGConnection.maxRows) && 
+							Objects.equals(maxTime, xGConnection.maxTime) && 
+							Objects.equals(maxTempDisk, xGConnection.maxTempDisk) && 
+							Objects.equals(parallelism, xGConnection.parallelism) && 
+							Objects.equals(priority, xGConnection.priority) && 
+							force == xGConnection.force &&
+							Objects.equals(timeoutMillis, xGConnection.timeoutMillis);
+							
+	}
+
 	/*!
 	 * Add connection level settings here so that connections with different settings map to different hash codes.
-	 */
+	 */ 
 	@Override
-	public int hashCode()
-	{
-		int hash = originalIp.hashCode() + originalPort + user.hashCode()
-		+ pwd.hashCode() + database.hashCode() + tls.hashCode() 
-		+ properties.hashCode() + setSchema.hashCode() + Long.hashCode(setPso) 
-		+ (force ? 1 : 0) + Long.hashCode(timeoutMillis) + networkTimeout;
-		hash += maxRows == null ? 0 : maxRows.hashCode();
-		hash += maxTime == null ? 0 : maxTime.hashCode();
-		hash += maxTempDisk == null ? 0 : maxTempDisk.hashCode();
-		hash += parallelism == null ? 0 : parallelism.hashCode();
-		hash += priority == null ? 0 : priority.hashCode();
-
-		return hash;
+	public int hashCode() {
+		return Objects.hash(originalIp, originalPort, user, database, networkTimeout, tls, pwd, properties, setSchema, setPso, maxRows, maxTime, maxTempDisk, parallelism, priority, force, timeoutMillis);
 	}
 
 	@Override
@@ -3851,5 +3860,19 @@ public class XGConnection implements Connection
 			newSecurityToken.getData().toString(),
 			newSecurityToken.getSignature().toString(),
 			newSecurityToken.getIssuerFingerprint().toString()));
+	}
+
+	/**
+	 * Turn off connection caching with SSO handshake flow. These sorts of connections cannot be reasonably cached.
+	 * The log in proceess involves the user going to an external url and authenticating. If a "cached" connection 
+	 * of this is returned, then it is not really connected and will trigger a reconnect, which will cause us to
+	 * look in the cache for this connection. Remember, we take 30 seconds to return connections to the cache.
+	 * If it's not there, then we need the user to use another url. Overall, this is too much to try to get working
+	 * for the minimal benefits of connection caching this one special type of connection that requires user input.
+	 * Let's disable this for now since we are getting rid of this pooling in the connector's rewrite.
+	 */	
+	boolean isDisabledConnCaching(){
+		final XGConnection.HandshakeType handshake = XGConnection.HandshakeType.valueOf((properties.getProperty("handshake", "GCM").toUpperCase()));
+		return handshake == HandshakeType.SSO && user.toLowerCase().equals("") && pwd.toLowerCase().equals("");
 	}
 }
